- Added some fancy positioning. Need to fix it some more using a   javascript function probably

--- a/lib/templates/main.html
+++ b/lib/templates/main.html
@@ -8,8 +8,8 @@
 </template>
 
 <template name="meteor_os_login">
-    <div class="metal linear" style="position: absolute; top:10%; bottom: calc(10% + 40px); left:35%; width:30%; height: auto;">
-        <div class="loginForm" style="position: absolute; margin-top: 10%; bottom: 10%;">
+    <div class="metal linear loginFormContainer">
+        <div class="loginForm">
             {{> atForm}}
         </div>
     </div>
