--- a/lib/templates/main.css
+++ b/lib/templates/main.css
@@ -75,10 +75,26 @@ html,body {
 /*        Login  CSS          */
 /* -------------------------- */
 
+.loginFormContainer {
+    position: absolute;
+    top: calc((100% - 40px)/2);
+    left: 50%;
+    width: 500px;
+    max-height: 450px;
+    min-height: 450px;
+    margin: calc(-50% + (50% - 450px/2)) 0 0 calc(-50% + (50% - 500px/2));
+}
+
 .loginForm {
     position: absolute;
+    top: 50%;
+    left: 50%;
     width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
+    max-height: 325px;
+    min-height: 325px;
+    margin: calc(-50% + (50% - 375px/2)) 0 0 -50%;
+}
+
+.at-form {
+    margin: 0;
 }
