- Initial library functionality completed

--- a/lib/components/main/main.html
+++ b/lib/components/main/main.html
@@ -1,5 +1,8 @@
 <template name="meteorOS">
     <div id="meteor-os">
+        {{#if currentUser}}
+            {{> Applications}}
+        {{/if}}
     </div>
     {{> meteorOSFooter}}
 </template>
