--- a/builtins/file-browser/templates/file-browser.css
+++ b/builtins/file-browser/templates/file-browser.css
@@ -4,12 +4,15 @@
     background: #DDD;
     
     font-family: monaco, Consolas, 'Lucida Console', monospace;
-    font-size: 22px;
+    font-size: 17px;
     font-style: normal;
     font-variant: normal;
     font-weight: 500;
-    line-height: 24px;
+    line-height: 18px;
+}
 
+.fb-main img,span {
+    vertical-align: middle;
 }
 
 .fb-pane-navbar {
@@ -51,6 +54,8 @@
     height: 100%;
     width: 100%;
 
+    overflow-y: auto;
+
     padding: 5px 5px 5px 5px;
     
     -webkit-touch-callout: none;
@@ -76,12 +81,35 @@
     background: #EEE;
 }
 
-.fb-pane.fb-pane-nav .fb-favorites img {
-    vertical-align: top;
-}
-
 .fb-pane.fb-pane-main {
     left: 252px;
     right: 0px;
     width: auto;
+}
+
+.fb-pane.fb-pane-main .fb-files {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    height: 100%;
+    width: 100%;
+
+    overflow-y: auto;
+
+    padding: 5px 5px 5px 5px;
+    
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+.fb-pane.fb-pane-main .fb-files .fb-file {
+    cursor: pointer;
+}
+
+.fb-pane.fb-pane-main .fb-files .fb-file:hover {
+    background: #EEE;
 }
