- Started to implement dropzone.   - Using http://www.dropzonejs.com/bootstrap.html as a starting point   - Need to add things to the database that say how what the upload     progress is, etc so that we can render the uploads dynamically

--- a/builtins/file-browser/templates/file-browser.html
+++ b/builtins/file-browser/templates/file-browser.html
@@ -40,7 +40,8 @@
 </template>
 
 <template name='fb_pane_main'>
-    <div class='fb-files'>
+    <div id='fb-dropzone' class='fb-files'>
+        <div id='previews-container' style='display: none;'></div>
         {{#with currentPathFiles}}
             {{#each files}}
                 {{#with fileContext}}
