--- a/builtins/file-browser/templates/file-browser.html
+++ b/builtins/file-browser/templates/file-browser.html
@@ -66,7 +66,7 @@
         {{#with fileContext}}
             {{#with FS.GetFile collectionName id}}
                 {{#unless this.isUploaded}}
-                <span class='td progressbar'>{{> FS.UploadProgressBar bootstrap=true}}</span>
+                <span class='td progressbar'>{{> FS.UploadProgressBar bootstrap=true class='progress-bar-success progress-bar-striped active'}}</span>
                 {{/unless}}
             {{/with}}
         {{/with}}
