--- a/lib/components/main/main.html
+++ b/lib/components/main/main.html
@@ -1,6 +1,6 @@
 <template name="meteorOS">
     <div id="meteor-os">
-        {{#if currentUser}}
+        {{#if checkUserStatus}}
             {{> Applications}}
         {{/if}}
     </div>
