- Fixed droppable so that the dropzone is now fully functional

--- a/builtins/file-browser/templates/file-browser.css
+++ b/builtins/file-browser/templates/file-browser.css
@@ -176,3 +176,7 @@ span.glyphicon {
     vertical-align: middle;
     margin-top: -5px;
 }
+
+.dz-drag-hover {
+    outline: 2px solid RoyalBlue;
+}
