--- a/builtins/file-browser/templates/file-browser.css
+++ b/builtins/file-browser/templates/file-browser.css
@@ -45,6 +45,7 @@
 .fb-pane.fb-pane-nav {
     left: 0px;
     width: 248px;
+    overflow: auto;
 }
 
 .fb-pane.fb-pane-nav .fb-favorites {
@@ -53,8 +54,6 @@
     left: 0px;
     height: 100%;
     width: 100%;
-
-    overflow-y: auto;
 
     padding: 5px 5px 5px 5px;
 
@@ -85,6 +84,7 @@
     left: 252px;
     right: 0px;
     width: auto;
+    overflow: auto;
 }
 
 .fb-pane.fb-pane-main .fb-files {
@@ -93,11 +93,7 @@
     top: 0px;
     left: 0px;
     height: auto;
-    max-height: 100%;
     width: auto;
-    max-width: 100%;
-
-    overflow-y: auto;
 
     padding: 5px 5px 5px 5px;
 
@@ -111,8 +107,9 @@
 
 .fb-pane.fb-pane-main .fb-files .fb-file {
     display: table-row;
-    width: 100%;
+    width: auto;
     cursor: pointer;
+    white-space: nowrap;
 }
 
 .fb-files .fb-file .td {
