- Added "Open File" dialog mode - Added part to example application that opens the file   - Does not currently return a file handler

--- a/builtins/file-browser/templates/file-browser.html
+++ b/builtins/file-browser/templates/file-browser.html
@@ -3,7 +3,9 @@
 </template>
 
 <template name='file_browser_dialog'>
-    {{> file_browser}}
+    {{#with dialogMode}}
+        {{> file_browser}}
+    {{/with}}
 </template>
 
 <template name='file_browser'>
