--- a/example/applications/example1/templates/tab1.html
+++ b/example/applications/example1/templates/tab1.html
@@ -1,3 +1,3 @@
 <template name="example1tab1template">
-    Example 1 Tab 1 Template Content
+    <input type="button" id="_openFileDialog" value="Open File" />
 </template>
