--- a/builtins/settings/templates/settings.css
+++ b/builtins/settings/templates/settings.css
@@ -1,7 +1,8 @@
-.tm-main {
+/* ALL SETTINGS */
+
+.mos-settings-main {
     width: 100%;
     height: 100%;
-    background: #DDD;
 
     font-family: monaco, Consolas, 'Lucida Console', monospace;
     font-size: 16px;
@@ -10,3 +11,43 @@
     font-weight: 500;
     line-height: 16px;
 }
+
+.mos-settings-main h2 {
+    margin-top: 0;
+    text-decoration: underline;
+    font-weight: bold;
+}
+
+.mos-settings-main .scroll-container {
+    overflow: auto;
+    height: calc(100% - 43px);
+}
+
+/* ACCOUNTS */
+
+/* TEAM MANAGEMENT */
+
+.mos-settings-main .mos-settings-tm-main {
+    margin-top: 4px;
+    margin-left: 12px;
+    margin-right: 12px;
+    height: calc(100% - 54px);
+}
+
+.mos-settings-main .mos-settings-tm-main .scroll-container .current-teams span {
+    display: inline-block;
+    margin-bottom: 4px;
+}
+
+.mos-settings-main .mos-settings-tm-btns {
+    height: 50px;
+    bottom: 0;
+    border-top: 4px solid #aaa;
+}
+
+.mos-settings-tm-btns .btn-group {
+    padding-top: 6px;
+    padding-left: 6px;
+}
+
+/* INTERFACE OPTIONS */
