--- a/builtins/settings/templates/settings.html
+++ b/builtins/settings/templates/settings.html
@@ -7,7 +7,25 @@ Accounts Page
 <!-- TEAM MANAGEMENT -->
 
 <template name='_meteor_os_settings_team_management_page'>
-Team Management Page
+<div class='mos-settings-main'>
+    <div class='mos-settings-tm-main'>
+        <h2>Team Management</h2>
+        <div class='scroll-container'>
+            <div class='current-teams'>
+                {{#each myteams}}
+                <span class='team'><b>Team: </b>{{name}}{{#if isOwner}} <span class='label label-default'>Owner</span>{{/if}}</span><br>
+                {{else}}
+                    No Teams yet
+                {{/each}}
+            </div>
+        </div>
+    </div>
+    <div class='mos-settings-tm-btns'>
+        <div class='btn-group'>
+            <button type='button' class='btn btn-success' data-action='newTeam'><span class='glyphicon glyphicon-plus'></span> New Team</button>
+        </div>
+    </div>
+</div>
 </template>
 
 <!-- INTERFACE OPTIONS -->
