- Initial user inviting works

--- a/builtins/settings/templates/modals/newTeam.html
+++ b/builtins/settings/templates/modals/newTeam.html
@@ -18,7 +18,7 @@
             <div class="form-group">  
                 <label class="col-md-3 control-label" for="invite">Invite</label>  
                 <div class="col-md-6">
-                    {{> tagsinput tagField='username' id='invite' name='invite' placeholder='User name' autocompleteSettings=settings}}
+                    {{> tagsinput tagsVar='newTeamTagsVar' tagField='username' id='invite' name='invite' placeholder='User name' autocompleteSettings=settings}}
                     <span class="help-block">Start typing a name</span>  
                 </div>  
             </div>  
