- All buttons involved with teams work as expected

--- a/builtins/settings/templates/pages/team-management/team_management.html
+++ b/builtins/settings/templates/pages/team-management/team_management.html
@@ -33,3 +33,11 @@
     </div>
 </div>
 </template>
+
+<template name="userPill">
+    <span class="label label-default">{{username}}</span>
+</template>
+
+<template name="userNoMatch">
+    <span class="text-danger">No user found for <b>{{getFilter}}</b>!</span>
+</template>
