--- a/builtins/settings/templates/pages/team-management/modals/newTeam/newTeam.html
+++ b/builtins/settings/templates/pages/team-management/modals/newTeam/newTeam.html
@@ -12,17 +12,5 @@
         </form>  
     </div>  
 </div>  
-<div class="row">   
-    <div class="col-md-12">  
-        <form class="form-horizontal">  
-            <div class="form-group">  
-                <label class="col-md-3 control-label" for="invite">Invite</label>  
-                <div class="col-md-6">
-                    {{> tagsinput tagsVar='newTeamTagsVar' tagField='username' id='invite' name='invite' placeholder='User name' autocompleteSettings=settings}}
-                    <span class="help-block">Start typing a name</span>  
-                </div>  
-            </div>  
-        </form>
-    </div>  
-</div>
+{{> _meteor_os_settings_team_management_invite_users}}
 </template>
