- Added gravatar support - Removing users works from the owner's perspective - Regression where user leaving the team does not remove from   team.pending list

--- a/builtins/settings/templates/pages/team-management/modals/common-modal-templates.html
+++ b/builtins/settings/templates/pages/team-management/modals/common-modal-templates.html
@@ -15,7 +15,7 @@
 </template>
 
 <template name="userPill">
-    <span class="label label-default">{{username}}</span>
+    <img src={{profile.gravatarUrl}}> <span>{{username}}</span>
 </template>
 
 <template name="userNoMatch">
