--- a/builtins/settings/templates/pages/team-management/modals/editTeam/editTeam.html
+++ b/builtins/settings/templates/pages/team-management/modals/editTeam/editTeam.html
@@ -2,23 +2,25 @@
 {{#with team}}
     <div class="row">   
         <label class="col-md-3 control-label text-right" for="owner">Owner</label>  
-        <span name="owner" class="col-md-6">{{owner.username}}</span>  
+        <div name="owner" class="col-md-6">
+            <div class="user"><img src={{owner.profile.gravatarUrl}}> <span>{{owner.username}}</span></div>
+        </div>
     </div><br>
     <div class="row">   
         <label class="col-md-3 control-label text-right" for="members">Members</label>  
         <div name="members" class="col-md-6 members">
             {{#each members}}
-            <span>{{username}}</span><br>
+                <div class='user'><img src={{profile.gravatarUrl}}> <span>{{username}}</span><span class='removeMember' data-id={{_id}}>&times;</span></div>
             {{else}}
-                <span>No other members have accepted this invitation yet.</span>
+                <span>Nobody has accepted this invitation yet.</span>
             {{/each}}
         </div>
     </div><br>
     <div class="row">   
         <label class="col-md-3 control-label text-right" for="pending">Pending</label>  
-        <div name="members" class="col-md-6 members">
+        <div name="pending" class="col-md-6 members">
             {{#each pending}}
-            <span>{{username}}</span><br>
+            <div class='user'><img src={{profile.gravatarUrl}}> <span>{{username}}</span><span class='removePending' data-id={{_id}}>&times;</span></div>
             {{else}}
                 <span>No pending members.</span>
             {{/each}}
