--- a/builtins/settings/templates/settings.css
+++ b/builtins/settings/templates/settings.css
@@ -23,6 +23,10 @@
     height: calc(100% - 43px);
 }
 
+span.glyphicon:before {
+    vertical-align: middle;
+}
+
 /* ACCOUNTS */
 
 /* TEAM MANAGEMENT */
