- Added customizable background URL.

--- a/lib/components/main/main.html
+++ b/lib/components/main/main.html
@@ -1,5 +1,5 @@
 <template name="meteorOS">
-    <div id="meteor-os">
+    <div id="meteor-os" style={{getBackground}}>
         <div class="alertBox">
             {{> bootstrapAlerts}}
         </div>
