--- a/lib/components/login-flow/login.html
+++ b/lib/components/login-flow/login.html
@@ -1,5 +1,5 @@
 <template name="meteorOSLogin">
-    <div id="meteor-os">
+<div id="meteor-os" style={{getBackground}}>
         {{> meteorOSLoginForm}}
     </div>
     {{> meteorOSFooter}}
