--- a/builtins/file-browser/templates/file-browser.css
+++ b/builtins/file-browser/templates/file-browser.css
@@ -18,16 +18,9 @@
     height: 40px;
     width: 100%;
     background: #FFF;
-}
-
-.fb-pane-navbar input {
-    position: absolute;
-    top: 0px;
-    left: 0px;
-    right: 0px;
-    bottom: 0px;
-    margin: 5px 5px 5px 5px;
-    width: calc(100% - 10px);
+    padding-top: 5px;
+    padding-left: 5px;
+    padding-right: 5px;
 }
 
 .fb-pane {
