--- a/lib/style.css
+++ b/lib/style.css
@@ -18,3 +18,24 @@ html,body {
 .click-thru {
     pointer-events: none;
 }
+
+/* -------------------------- */
+/*       Extra Btns           */
+/* -------------------------- */
+
+.btn-custom-gray {
+    background-color: hsl(0, 0%, 79%) !important;
+    background-repeat: repeat-x;
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#134134134", endColorstr="#c9c9c9");
+    background-image: -khtml-gradient(linear, left top, left bottom, from(#134134134), to(#c9c9c9));
+    background-image: -moz-linear-gradient(top, #134134134, #c9c9c9);
+    background-image: -ms-linear-gradient(top, #134134134, #c9c9c9);
+    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #134134134), color-stop(100%, #c9c9c9));
+    background-image: -webkit-linear-gradient(top, #134134134, #c9c9c9);
+    background-image: -o-linear-gradient(top, #134134134, #c9c9c9);
+    background-image: linear-gradient(#134134134, #c9c9c9);
+    border-color: #c9c9c9 #c9c9c9 hsl(0, 0%, 68.5%);
+    color: #333 !important;
+    text-shadow: 0 1px 1px rgba(255, 255, 255, 0.69);
+    -webkit-font-smoothing: antialiased;
+}
