- Added much function   - Refined right click menus significantly   - Added new folder modal

--- a/builtins/file-browser/templates/file-browser.html
+++ b/builtins/file-browser/templates/file-browser.html
@@ -64,6 +64,7 @@
     <img class='td' src={{fileIconURL}} />
     <span class='td fb_fileName'>{{name}}</span> 
     {{#unless isUploaded}}<span class='td'>{{> spinner}}</span>{{/unless}}
+    {{attachContext}}
 </div>
 </template>
 
